--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,5 +6,21 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div>
+        <p><h3>@Model.AccountName</h3></p>
+        <p>
+            <div>
+                <table class="table">
+                    <tbody>
+                        @foreach (var blob in Model.Blobs)
+                        {
+                            <tr>
+                                <td>@blob</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </p>
+    </div>
 </div>
