Added DTO to get blob properties

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -15,7 +15,7 @@
                         @foreach (var blob in Model.Blobs)
                         {
                             <tr>
-                                <td>@blob</td>
+                                <td><a href="@blob.Href"> @blob.Name</a></td>
                             </tr>
                         }
                     </tbody>
