Added keyvault blog code

--- a/AzureStorage/Pages/Index.cshtml
+++ b/AzureStorage/Pages/Index.cshtml
@@ -20,14 +20,14 @@
     <div>
 
         <table class="table">
-            <tbody>
+           @*  <tbody>
                 @foreach (var blob in Model.Blobs)
                 {
                     <tr>
                         <td><a href="@blob.Href"> @blob.Name</a></td>
                     </tr>
                 }
-            </tbody>
+            </tbody> *@
         </table>
     </div>
 </div>
