--- a/AzureStorage/Pages/KeyVault.cshtml
+++ b/AzureStorage/Pages/KeyVault.cshtml
@@ -11,4 +11,8 @@
 
         <label>Secret: @Model.SecretValue</label><label></label>
     </div>
+    <div>
+
+        <label>Key: @Model.KeyValue</label><label></label>
+    </div>
 </div>
